# Multi_Agent_DRI_Architecture

./: .env.example  .gitignore  CLAUDE.md  Prompt_Initial.md  Prompt_Second.md  pyproject.toml
src/dri/agents/: base.py  manager.py  root.py  worker.py
src/dri/api/: cli.py
src/dri/config/: settings.py
src/dri/core/: budget.py  communication.py  memory.py  models.py  registry.py
src/dri/llm/: anthropic_provider.py  base.py  factory.py  gemini_provider.py
src/dri/orchestration/: company_executor.py  executor.py  graph.py  spawner.py
src/dri/skills/: base.py  catalog.py  registry.py
src/dri/storage/: database.py  orm.py  repositories.py
src/dri/tools/: __init__.py  base.py  code_exec.py  external_actions.py  file_ops.py  web_search.py
tests/: conftest.py
tests/integration/: test_full_session.py
tests/unit/: test_budget.py  test_memory.py  test_models.py  test_registry.py  test_tools.py
