[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dri"
version = "0.1.0"
description = "Self-organizing multi-agent DRI company system"
requires-python = ">=3.12"
dependencies = [
    # LLM providers
    "anthropic>=0.40.0",
    "google-genai>=1.10.0",
    # Orchestration
    "langgraph>=0.2.50",
    "langgraph-checkpoint-sqlite>=2.0.0",
    # Storage
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    # Data validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # CLI
    "rich>=13.9.0",
    "typer>=0.15.0",
    # Tools
    "tavily-python>=0.5.0",
    "httpx>=0.28.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    "anyio>=4.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
]

[project.scripts]
dri = "dri.api.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/dri"]

[tool.hatch.build.targets.sdist]
packages = ["src/dri"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
